--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Enter URL to shorten</h1>
-<form action="shorten_url" method="post">
+<form action="<%= shorten_url %>" method="post">
   <%= authenticity_token %>
   <input type="text" name="url">
   <input type="submit" class="submit">
