--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,3 +1,3 @@
-<h1>New Link Created</h1>
+<h1>Shortened Link</h1>
 <% link = "#{request.protocol}#{request.host_with_port}/#{@link.short_url}" %>
 <a href="<%= link %>"><%= link %></a>
